set flask to end at ellipfits_prefix instead of zero

--- a/simulation_code/example.config
+++ b/simulation_code/example.config
@@ -92,7 +92,7 @@ ZSEARCH_TOL: 0.0001				    # Precision for finding radial selection function max
 SHEAR_FITS_PREFIX: lensing-map-          # Prefix for lensing map (kappa, gamma1, gamma2) FITS files.
 MAPWERFITS_PREFIX: clustering-map-     # Prefix for the map .fits files, same data as above. Write 0 for no output.   
 
-EXIT_AT:	       0				    # Write name of last output to be created (program will stop there). 0 for full run.
+EXIT_AT:	       ELLIPFITS_PREFIX	    # Write name of last output to be created (program will stop there). 0 for full run.
 FITS2TGA:          0				    # 0 - Only FITS; 1 - FITS and TGA; 2 - Only TGA.
 USE_UNSEEN:	       1				    # Fill masked regions of output Healpix maps with healpy's UNSEEN (1) or zero (0).  
 LRANGE_OUT:        2 500			    # Inclusive l interval for alm and Cls output. Irrelevant if there is no such output.
