saving cov, icov, fid_mean as well

--- a/mfcl.ini
+++ b/mfcl.ini
@@ -32,4 +32,5 @@ source_file = ${PWD}/simulation_code/new_data/${SOURCE}.fits
 file = ./mf_cosmosis.py
 
 [test]
+save_dir = outputs
 fatal_errors = T
