un-hardcoding variables

--- a/mfcl.ini
+++ b/mfcl.ini
@@ -1,6 +1,6 @@
 
 [runtime]
-sampler = emcee
+sampler = test
 root = ${PWD}
 
 [pipeline]
@@ -16,17 +16,17 @@ samples = 10000
 nsteps = 10
 
 [output]
-filename = output/mfcl.txt
+filename = cosmosis_chains/mfcl.txt
 format = text
 verbosity = debug
 
 [mfcl_params]
-smoothing = 5
-nside = 1024
-thr_ct = 10
-sky_frac = 0.44
-a_type = MF+Cl
-m_type = c+l
+smoothing = ${SMOOTHING}
+nside = ${NSIDE}
+thr_ct = ${THR_CT}
+sky_frac = ${SKY_FRAC}
+a_type = ${A_TYPE}
+m_type = ${M_TYPE}
 source = ${SOURCE}
 source_file = ${PWD}/simulation_code/new_data/${SOURCE}.fits
 file = ./mf_cosmosis.py
