fixed output saving

--- a/mfcl.ini
+++ b/mfcl.ini
@@ -1,6 +1,6 @@
 
 [runtime]
-sampler = test
+sampler = emcee
 root = ${PWD}
 
 [pipeline]
@@ -15,8 +15,9 @@ walkers = 40
 samples = 10000
 nsteps = 10
 
+
 [output]
-filename = cosmosis_chains/mfcl.txt
+filename = cosmosis_chains/mfcl_${SMOOTHING}_${NSIDE}_${THR_CT}_${SKY_FRAC}_${A_TYPE}_${M_TYPE}_${SOURCE}.txt
 format = text
 verbosity = debug
 
@@ -32,5 +33,5 @@ source_file = ${PWD}/simulation_code/new_data/${SOURCE}.fits
 file = ./mf_cosmosis.py
 
 [test]
-save_dir = outputs
+save_dir = test_outputs
 fatal_errors = T
